Closed Bug 328881 Opened 19 years ago Closed 19 years ago

Set correct offsets on scrolled frames

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Assigned: roc)

References

Details

Attachments

(1 file)

Prior to removing views, we need to set the correct position on scrolled frames. Currently scrolled frames are placed at (0,0) and the position is basically ignored because stuff like nsIFrame::GetOffsetTo uses view positions in this case.  I'll attach a patch that sets the "true" position on scrolled frames. I want to land this now just to ensure that any regressions from code mistakenly relying on the (0,0) position are easily caught.
Attached patch fixSplinter Review
Attachment #213492 - Flags: superreview?(dbaron)
Attachment #213492 - Flags: review?(dbaron)
Attachment #213492 - Flags: superreview?(dbaron)
Attachment #213492 - Flags: superreview+
Attachment #213492 - Flags: review?(dbaron)
Attachment #213492 - Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Depends on: 330619
Depends on: 331729
Looks like fixed-pos frames were depending on the (0,0) thing.  I'll fix them in bug 331729.
Could this bug have caused Bug 330073 ?
Try backing it out to see... it's very small.
Depends on: 334765
I backed this out and I was no longer able to reproduce Bug 330073.
Depends on: 330073
Depends on: 364719
So I just ran into the fact that updating frame coords in ScrollPositionDidChange is a little late.  In my case, nsScrollPortView::ScrollToImpl changes the view's position, then does various scroll analysis (e.g. CanScrollWithBitBlt and the like) _then_ calls ScrollPositionDidChange.  We need to update the frame's rect before the CanScrollWithBitBlt call if we want to wean nsIFrame::GetOffsetTo off of views.
My compositor patch does that. (In fact it eviscerates nsScrollPortView and puts most of the logic in nsGfxScrollFrame.)
Depends on: 385590
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: