Bug 328881. Set the frame offset of scrolled frames correctly. This shouldn't affect anything immediately --- the offset is not used currently --- but it helps prepare for view removal and I'd like to catch regressions now. r+sr=dbaron